objects/Account_Reassignment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Reassignments</relationshipLabel>
        <relationshipName>Account_Reassignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date a reassignment request is Approved by all 4 managers</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date a reassignment request is now approved and completed.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Manager_Approval__c</fullName>
        <label>Current Owner Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Manager_Approved_Date__c</fullName>
        <label>Current Owner Manager Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_RSD_Approval__c</fullName>
        <label>Current Owner RSD Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Owner_RSD_Approved_Date__c</fullName>
        <label>Current Owner RSD Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Owner_RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Role__c</fullName>
        <formula>Account__r.Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Ship_To_Number__c</fullName>
        <formula>Account__r.CustomerShipTo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Ship To Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Approved_Status__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Drafted&quot;), 0, 
IF( ISPICKVAL(Status__c, &quot;Pending Approval&quot;), 0,
IF( ISPICKVAL(Status__c, &quot;Approved&quot;),  TODAY() -  Approved_Date__c , 
IF( ISPICKVAL(Status__c, &quot;Rejected&quot;), 0, 
0 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Approved Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Pending_Approval_Status__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Drafted&quot;), 0,
IF( ISPICKVAL(Status__c, &quot;Pending Approval&quot;), TODAY() - Pending_Approval_Date__c,
IF( ISPICKVAL(Status__c, &quot;Approved&quot;),  Approved_Date__c - Pending_Approval_Date__c, 
IF( ISPICKVAL(Status__c, &quot;Rejected&quot;),  Rejected_Date__c - Pending_Approval_Date__c,
0
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Pending Approval Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Owner_Manager_Approval__c</fullName>
        <label>New Owner Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Owner_Manager_Approved_Date__c</fullName>
        <label>New Owner Manager Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner_RSD_Approval__c</fullName>
        <label>New Owner RSD Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Owner_RSD_Approved_Date__c</fullName>
        <label>New Owner RSD Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Owner_RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner_Role__c</fullName>
        <formula>New_Owner__r.UserRole.Name</formula>
        <label>New Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Reassignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Approval_Date__c</fullName>
        <description>Date that the user first submits request for approval</description>
        <label>Pending Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <description>Date a reassignment request is first rejected</description>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShipToNumber__c</fullName>
        <formula>Account__r.ShipToNumber__c</formula>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Statuses will dynamically change depending on stage in the Approval process</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>